deploy/overlays/example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tronicare-admin
  labels:
    pod-security.kubernetes.io/enforce: restricted
